# Raw_hub

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/sources/: placeholder_api.yml  public_api.yml
dags/: ext-Rest-api.py
dev_tools/: request_token.py
notebooks/: Extract_placeholder_api.ipynb  Flatten_json_wide.ipynb  Load_raw_to_deltatable.ipynb
python_utils/: http_client.py  lakehouse_utils.py  logging_utils.py  text_cleaning.py
